Added requirement to select DMF Directories before using the program.